kubernetes/monitoring/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
      containers:
        - name: grafana
          image: grafana/grafana:12.4.2
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /var/lib/grafana
            - name: datasources
              mountPath: /etc/grafana/provisioning/datasources
            - name: dashboard-providers
              mountPath: /etc/grafana/provisioning/dashboards
            - name: dashboard-infra
              mountPath: /var/lib/grafana/dashboards/infrastructure
            - name: dashboard-apps
              mountPath: /var/lib/grafana/dashboards/applications
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 400m
              memory: 768Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: grafana-pvc
        - name: datasources
          configMap:
            name: grafana-datasource
        - name: dashboard-providers
          configMap:
            name: grafana-dashboard-providers
        - name: dashboard-infra
          configMap:
            name: grafana-dashboard-infra
        - name: dashboard-apps
          configMap:
            name: grafana-dashboard-apps
