kubernetes/monitoring/ingress-pushgateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pushgateway
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-pushgateway-auth@kubernetescrd
spec:
  rules:
    - host: "${PUSHGATEWAY_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pushgateway
                port:
                  number: 9091
